--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "0.19.0",
+    "axios": "^0.19.0",
+    "cors": "2.8.5",
     "express": "^4.17.1",
-    "cors": "2.8.5"
+    "express-fileupload": "^1.2.1",
+    "form-data": "^4.0.0",
+    "multer": "^1.4.3"
   }
 }
